# installer-80

./: LICENSE  README.md
dbus/: Rakefile
dbus/lib/yast2/: installer.rb  installer_options.rb
dbus/lib/yast2/dbus/: installer.rb  service.rb
server/: .gitignore  .rubocop.yml  Gemfile
server/.bundle/: config
server/app/controllers/: application_controller.rb  disks_controller.rb  languages_controller.rb  options_controller.rb  products_controller.rb  storage_controller.rb
server/config/: application.rb  credentials.yml.enc  routes.rb
server/config/initializers/: installer.rb
server/lib/yast2/: installer.rb  installer_client.rb
web/: package.json
web/src/: App.js  Category.js  LanguageSelector.js  ProductSelector.js  Proposal.js  TargetSelector.js
web/src/context/: actionTypes.js  installer.js  reducers.js
web/src/lib/: InstallerClient.js
yast-dbus-proxy/: Cargo.toml
yast-dbus-proxy/src/: client.rs  main.rs
yastd/: Gemfile
yastd-proxy/: Cargo.toml
yastd-proxy/src/: client.rs  main.rs
yastd/lib/yast2/: installer.rb  installer_status.rb
yastd/lib/yast2/dbus/: installer.rb  installer_client.rb  service.rb
