[package]
name = "yast-dbus-proxy"
version = "0.1.0"
authors = ["Imobach González Sosa <igonzalezsosa@suse.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.3"
serde_json = "1.0"
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
http-types = "2.12.0"
